infra/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nodejs-deployment
    namespace: ingress-nginx
    labels:
        app: nodejs
spec:
    replicas: 3
    selector:
        matchLabels:
            app: nodejs
    template:
        metadata:
            labels:
                app: nodejs
        spec:
            containers:
                - name: nodejs
                  image: huyfst/nodejs
                  ports:
                      - containerPort: 3000
            imagePullSecrets:
                - name: regcred
