infra/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres-deployment
    namespace: ingress-nginx
    labels:
        app: postgres
spec:
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
                role: db
        spec:
            volumes:
                - name: persistent
                  persistentVolumeClaim:
                      claimName: pvc1
            containers:
                - name: postgres
                  image: postgres
                  ports:
                      - containerPort: 5432
                  volumeMounts:
                      - mountPath: /var/lib/postgresql/data
                        name: persistent
                  resources:
                      limits:
                          cpu: 15m
                          memory: 100Mi
                      requests:
                          cpu: 5m
                          memory: 50Mi
                #   command:
                #       [
                #           "psql -U myuser -d mydatabase -c 'CREATE TABLE k8s (name text);'",
                #           "psql -U myuser -d mydatabase -c "INSERT INTO k8s (name) VALUES ('hello huy');"",
                #       ]
