infra/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: react-deployment
    namespace: ingress-nginx
    labels:
        app: react
spec:
    replicas: 3
    selector:
        matchLabels:
            app: react
    template:
        metadata:
            labels:
                app: react
                role: frontend
        spec:
            containers:
                - name: react
                  image: huyfst/react
                  ports:
                      - containerPort: 5173
                  resources:
                      limits:
                          cpu: 15m
                          memory: 100Mi
                      requests:
                          cpu: 5m
                          memory: 50Mi
