infra/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: web
    namespace: ingress-nginx
spec:
    selector:
        matchLabels:
            app: nginx # has to match .spec.template.metadata.labels
    serviceName: nginx
    replicas: 3 # by default is 1
    template:
        metadata:
            labels:
                app: nginx # has to match .spec.selector.matchLabels
        spec:
            containers:
                - name: nginx
                  image: registry.k8s.io/nginx-slim:0.24
                  ports:
                      - containerPort: 80
                        name: web
