infra/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx
    namespace: ingress-nginx
spec:
    ports:
        - port: 80
          name: web
    clusterIP: None
    selector:
        app: nginx
