infra/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nodejs-service
    namespace: ingress-nginx
spec:
    selector:
        app: nodejs
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
