infra/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres-service
    namespace: ingress-nginx
spec:
    selector:
        app: postgres
    ports:
        - protocol: TCP
          port: 5432
          targetPort: 5432
