infra/react-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: react-service
    namespace: ingress-nginx
spec:
    selector:
        app: react
    ports:
        - protocol: TCP
          port: 5173
          targetPort: 5173
