infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: minimal-ingress
    namespace: ingress-nginx
spec:
    ingressClassName: nginx
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: react-service
                            port:
                                number: 5173
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: nodejs-service
                            port:
                                number: 3000
